created user registraion

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -33,6 +33,18 @@
     </div>
 </nav>
 
+<div class="row">
+    {{#if success_msg}}
+        <div class="alert alert-success">{{success_msg}}</div>
+    {{/if}}
+    {{#if error_msg}}
+        <div class="alert alert-danger">{{error_msg}}</div>
+    {{/if}}
+    {{#if error}}
+        <div class="alert alert-danger">{{error}}</div>
+    {{/if}}
+</div>
+
 {{{ body }}}
 
 <footer class="container">
