--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,5 +1,12 @@
 <div class="container">
     <h2 class="page-header">Register</h2>
+    {{#if errors}}
+        {{#each errors}}
+            <div class="alert alert-danger">
+                {{msg}}
+            </div>
+        {{/each}}
+    {{/if}}
     <form method="post" action="/users/register">
         <div class="form-group">
             <label>Name</label>
