--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -13,36 +13,48 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+
         <ul class="navbar-nav mr-auto">
+            {{#if user }}
             <li class="nav-item active">
-                <a class="nav-link" href="/">Dashboard <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/dashboard">Dashboard <span class="sr-only">(current)</span></a>
             </li>
+            {{/if}}
         </ul>
 
+
         <ul class="navbar-nav navbar-right">
-            <li class="nav-item">
-                <a class="nav-link" href="/users/login">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/users/register">Register</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/users/logout">Logout</a>
-            </li>
+            {{#if user }}
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/logout">Logout</a>
+                </li>
+            {{else}}
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/register">Register</a>
+                </li>
+            {{/if}}
         </ul>
     </div>
 </nav>
 
 <div class="row">
-    {{#if success_msg}}
-        <div class="alert alert-success">{{success_msg}}</div>
-    {{/if}}
-    {{#if error_msg}}
-        <div class="alert alert-danger">{{error_msg}}</div>
-    {{/if}}
-    {{#if error}}
-        <div class="alert alert-danger">{{error}}</div>
-    {{/if}}
+    <div class="container">
+        {{#if success_msg}}
+            <br>
+            <div class="alert alert-success">{{success_msg}}</div>
+        {{/if}}
+        {{#if error_msg}}
+            <br>
+            <div class="alert alert-danger">{{error_msg}}</div>
+        {{/if}}
+        {{#if error}}
+            <br>
+            <div class="alert alert-danger">{{error}}</div>
+        {{/if}}
+    </div>
 </div>
 
 {{{ body }}}
