--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -4,10 +4,12 @@
     <title>LoginApp</title>
     <link rel="stylesheet" href="/css/bootstrap.css" />
     <link rel="stylesheet" href="/css/style.css" />
+
+    <script defer src="/js/fontawesome-all.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="/">Login App</a>
+    <a class="navbar-brand" href="/">Login App <i class="fas fa-camera-retro"></i></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -26,14 +28,14 @@
         <ul class="navbar-nav navbar-right">
             {{#if user }}
                 <li class="nav-item">
-                    <a class="nav-link" href="/users/logout">Logout</a>
+                    <a class="nav-link" href="/users/logout">Logout <i class="fas fa-lock"></i></a>
                 </li>
             {{else}}
                 <li class="nav-item">
-                    <a class="nav-link" href="/users/login">Login</a>
+                    <a class="nav-link" href="/users/login">Login <i class="fas fa-sign-in-alt"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/users/register">Register</a>
+                    <a class="nav-link" href="/users/register">Register <i class="fas fa-anchor"></i></a>
                 </li>
             {{/if}}
         </ul>
