--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,50 +1,34 @@
 <div class="container-fluid">
     <div class="row">
         <nav class="col-sm-3 col-md-2 d-none d-sm-block sidebar">
+            <br>
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Overview <span class="sr-only">(current)</span></a>
+                    <a class="nav-link active" href="#"><i style="font-size:3em;" class="fas fa-user"></i> <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Reports</a>
+                    <a class="nav-link" href="#"><i style="font-size:3em;" class="fas fa-car"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Analytics</a>
+                    <a class="nav-link" href="#"><i style="font-size:3em;" class="fas fa-envelope"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Export</a>
+                    <a class="nav-link" href="#"><i style="font-size:3em;" class="fas fa-comments"></i></a>
                 </li>
             </ul>
 
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Nav item</a>
+                    <a class="nav-link" href="#"><i style="font-size:3em;" class="fas fa-camera-retro"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Nav item again</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">One more nav</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Another nav item</a>
+                    <a class="nav-link" href="#"><i style="font-size:3em;" class="fas fa-users"></i></a>
                 </li>
             </ul>
 
-            <ul class="nav nav-pills flex-column">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Nav item again</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">One more nav</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Another nav item</a>
-                </li>
-            </ul>
         </nav>
 
-        <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
+        <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3 dashboardMain">
             <h1>Dashboard</h1>
 
             <section class="row text-center placeholders">
