--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -3,6 +3,7 @@
 <head>
     <title>LoginApp</title>
     <link rel="stylesheet" href="/css/bootstrap.css" />
+    <link rel="stylesheet" href="/css/animate.css" />
     <link rel="stylesheet" href="/css/style.css" />
 
     <script defer src="/js/fontawesome-all.js"></script>
@@ -71,5 +72,6 @@
             crossorigin="anonymous"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.js"></script>
+
 </body>
 </html>
