--- a/views/photos.handlebars
+++ b/views/photos.handlebars
@@ -4,7 +4,7 @@
             <br>
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/dashboard"><i style="font-size:3em;" class="fas fa-user"></i> <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/dashboard"><i style="font-size:3em;" class="fas fa-user"></i> <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/garage"><i style="font-size:3em;" class="fas fa-car"></i></a>
@@ -19,7 +19,7 @@
 
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item">
-                    <a class="nav-link" href="/photos"><i style="font-size:3em;" class="fas fa-camera-retro"></i></a>
+                    <a class="nav-link active" href="/photos"><i style="font-size:3em;" class="fas fa-camera-retro"></i></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/friends"><i style="font-size:3em;" class="fas fa-users"></i></a>
@@ -28,31 +28,8 @@
 
         </nav>
 
-        <main role="main" class="col-sm-10 ml-sm-auto col-md-11 pt-3 dashboardMain animated fadeInUpBig">
-            <h1>Dashboard</h1>
-
-            <section class="row text-center placeholders">
-                <div class="col-6 col-sm-3 placeholder">
-                    <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
-                    <h4>Label</h4>
-                    <div class="text-muted">Something else</div>
-                </div>
-                <div class="col-6 col-sm-3 placeholder">
-                    <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
-                    <h4>Label</h4>
-                    <span class="text-muted">Something else</span>
-                </div>
-                <div class="col-6 col-sm-3 placeholder">
-                    <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
-                    <h4>Label</h4>
-                    <span class="text-muted">Something else</span>
-                </div>
-                <div class="col-6 col-sm-3 placeholder">
-                    <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
-                    <h4>Label</h4>
-                    <span class="text-muted">Something else</span>
-                </div>
-            </section>
+        <main role="main" class="col-sm-10 ml-sm-auto col-md-11 pt-3 dashboardMain animated fadeInRight">
+            <h1>Photos</h1>
 
             <h2>Section title</h2>
             <div class="table-responsive">
