simple login application

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -63,8 +63,10 @@
 {{{ body }}}
 
 <footer class="container">
-    <p>&copy; Company 2018</p>
+
 </footer>
+
+    <script src="/js/canvas.js"></script>
 
     <script
             src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -72,6 +74,9 @@
             crossorigin="anonymous"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.js"></script>
+
+
+
 
 </body>
 </html>
