--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -29,7 +29,7 @@
         </nav>
 
         <main role="main" class="col-sm-10 ml-sm-auto col-md-11 pt-3 dashboardMain animated fadeInUpBig">
-            <h1>Dashboard</h1>
+            <h1>{{ name }} Dashboard</h1>
 
             <section class="row text-center placeholders">
                 <div class="col-6 col-sm-3 placeholder">
