--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,15 @@
 <div class="container">
+    <br>
     <h2 class="page-header">Account Login</h2>
+    <br>
+    <a class="btn btn-primary btn-block" href="/auth/facebook"><i class="fab fa-facebook-square"></i>  Facebook Login</a>
+    <br>
+    <a class="btn btn-danger btn-block" href="/auth/google"><i class="fab fa-google-plus"></i> Google Login</a>
+    <br>
     <form method="post" action="/users/login">
         <div class="form-group">
-            <label>Username</label>
-            <input type="text" class="form-control" placeholder="Username" name="username">
+            <label>Email</label>
+            <input type="text" class="form-control" placeholder="Email" name="email">
         </div>
         <div class="form-group">
             <label>Password</label>
@@ -11,4 +17,6 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
+
+
 </div>
