added privacy policy

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,6 +15,7 @@
                     <h1 class="display-2">Login App!</h1>
                     <p>This is a template for a simple Login application using Nodejs and Passport.</p>
                     <p><a class="btn btn-primary btn-lg" href="https://github.com/shahidfoy/NodeWithPassport" role="button" target="_blank">Learn more &raquo;</a></p>
+                    <p><a href="/privacy-policy">Privacy Policy</a></p>
 
             </div>
         </div>
